CHANGELOG XX XXXX 2011 Pierre Frisch
Rev the source code to 3.2.3
Android does not support IOException(String, Throwable) - ID: 3110982

CHANGELOG 16 November 2010 Pierre Frisch
Rev the source code to 3.2.2
serviceResolved not working properly - ID: 3032054
Only adds "first" server on Android - ID: 3065602
RecordReaper repeated stacktrace - ID: 3085234
JmDNS 3.2.1 on Android Application - ID: 3059323
Built-in support for multiple network interfaces - ID: 3079530
Create OSGi metadata in maven build - ID: 3085811
Path to prevent JmDNS.create() binding to loopback - ID: 3092443
java.net.InterfaceAddress not available on Android - ID: 3096650

CHANGELOG 31 August 2010 Pierre Frisch
Rev the source code to 3.2.1
ServiceInfo.setText() reannounces updated service only once - ID: 3030016
ServiceListener doesn't see updated ServiceInfo - ID: 3010451
unregisterService - ID: 3040520
Maven depository update - ID: 1432672
Maven POM file - ID: 3047223
********* Call backs are now executed in a separate executor. This should make JmDNS more responsive but may have consequences in the client code. *********

CHANGELOG 08 July 2010 Pierre Frisch
Rev the source code to 3.2.0
Add subtypes - ID: 1582803

CHANGELOG 27 June 2010 Pierre Frisch
Rev the source code to 3.1.8
JmDNS fails to get ServiceInfo from cache - ID: 3018122
Avahi DNS entries lost after an hour - ID: 3015920
No IPv6 address returned by getAddress - ID: 1952439
JmDNS.list() no longer provides results - ID: 3019756

CHANGELOG 10 June 2010 Pierre Frisch
Rev the source code to 3.1.7
********* Reorganization of the locking  / timer strategy. Hopefully it should be less deadlock prone. *********
index out of range exception in javax.jmdns.JmDNS	 - ID: 1414816
Optimization in JmDNS.SocketListener - ID: 1623129
JMDNS reports IPv6 link local addr as service type - ID: 1791481
JmDNSImpl.openMulticastSocket() fails on AIX - ID: 2821919
Service discovery takes about 6 s - FIX - ID: 2910895