@@ -1,6 +1,7 @@
 CHANGELOG XX XXXX 2011 Pierre Frisch
 Rev the source code to 3.2.3
 Android does not support IOException(String, Throwable) - ID: 3110982
+Replace dots with dashes in hostname instead of truncating - ID: 3111108
 
 CHANGELOG 16 November 2010 Pierre Frisch
 Rev the source code to 3.2.2
